--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JobSphere</title>
     <link rel="icon" href="./images/logo.png" />
+    <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript">
+    </script>
   </head>
   <body>
     <div id="root"></div>
