ReadMe file has been done

--- a/readme.html
+++ b/readme.html
@@ -1,106 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReadMe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="head">
+      <img
+        class="logo"
+        width="400px"
+        height="100px"
+        src="./frontend/images/logo.png"
+        alt="Project logo"
+      />
+      <h2 aligntext="center" class="title">JobSphere</h2>
+    </div>
 
-</head>
-<body>
-    <h2 aligntext="center" class="title">JobSphere</h2>
-<p align-text="center">
-  <a
-    href="https://www.meraki-academy.org"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    <img
-      class="logo"
-      width="400px"
-      height="100px"
-      src="./frontend/images/logo.png"
-      alt="Project logo"
-    />
-  </a>
-</p>
+    <h3 align-text="center" class="tableOfContents">Table Of Contents</h3>
 
-<p align-text="center">An awesome Project to describe README</p>
+    <ul>
+      <li>About</li>
+      <li>Getting Started</li>
+      <li>Usage</li>
+      <li>Built Using</li>
+      <li>User Story</li>
+      <li>Data Flow</li>
+      <li>Guided By</li>
+    </ul>
 
-<ul>
-  <li>About</li>
-  <li>Getting Started</li>
-  <li>Usage</li>
-  <li>Built Using</li>
-  <li>User Story</li>
-  <li>Data Flow</li>
-  <li>Guided By</li>
-</ul>
+    <h3 class="about">About:</h3>
+    <p>
+      Whether you’re a job seeker hunting for your dream role or a company on
+      the lookout for talent, we’ve got your back. Our platform is built to make
+      job hunting way easier (and even fun!).
+    </p>
 
-<h3 class="about">About</h3>
-<p>
-  Whether you’re a job seeker hunting for your dream role or a company on the
-  lookout for talent, we’ve got your back. Our platform is built to make job
-  hunting way easier (and even fun!).
-</p>
+    <h3 class="about">Getting Started:</h3>
+    <p>
+      These instructions will get you a copy of the project up and running on
+      your local machine for development and testing purposes.
+    </p>
+    <h3>Prerequisites:</h3>
+    <p>
+      - Visual Studio Code follow this
+      <a href="https://code.visualstudio.com/download">link</a> to install.
+    </p>
+    <p>
+      - Git Bash follow this <a href="https://git-scm.com/downloads">link</a> to
+      install.
+    </p>
+    <p>
+      - MongoDB follow this
+      <a href="https://www.mongodb.com/docs/manual/installation/">link</a> to
+      install.
+    </p>
+    <p>
+      - Node.js follow this <a href="https://nodejs.org/en/download">link</a> to
+      install.
+    </p>
 
-<h3 class="about">Getting Started</h3>
-<p>
-  These instructions will get you a copy of the project up and running on your
-  local machine for development and testing purposes.
-</p>
-<h4>Prerequisites:</h4>
-<p>- Visual Studio Code follow this <a href="">link</a> to install.</p>
-<p>- Git Bash follow this <a href="">link</a> to install.</p>
-<p>- MongoDB follow this <a href="">link</a> to install.</p>
-<p>- Node.js follow this <a href="">link</a> to install.</p>
+    <h3>Installing:</h3>
+    <p>1. Clone the repo to your local machine using git bash:</p>
+    <p class="gitBash">
+      git clone https://github.com/C14-BelalAbandah/MERAKI_Academy_Project_4.git
+    </p>
 
-<h4>Installing:</h4>
-<p>1. Clone the repo to your local machine using git bash.</p>
-<br />
-<p>git clone https://github.com/your_username_/Project-Name.git</p>
-<br />
-<br />
+    <p>2. Install packeges repeat this step in backend and frontend folder:</p>
 
-<p>2. Install packeges repeat this step in backend and frontend folder</p>
-<br />
+    <p class="gitBash">npm i</p>
 
-<p>npm i</p>
+    <p>3. Run server using git bash inside backend folder:</p>
 
-<p>3. Run server using git bash inside backend folder</p>
-<br />
-<p>npm run dev</p>
-<br />
-<br />
-<p>4. Run application using git bash inside frontend folder</p>
-<br />
-<p>npm run start</p>
-<br />
-<br />
-<p>Now app ready to use</p>
+    <p class="gitBash">npm run dev</p>
 
-<h3>Usage:</h3>
+    <p>4. Run application using git bash inside frontend folder:</p>
 
-<p>- You have to register to apply for job</p>
-<p>- You can click on the **Job** to go the jobs</p>
-<p>- You can search for any job</p>
-<p>- If yor are a recruiter, you can add jobs, and check all applications on your jobs</p>
+    <p class="gitBash">npm run start</p>
 
-<h3>Built Using:</h3>
-<p>Database:</p><a href="https://www.mongodb.com">MongoDB</a>
-<p>Server Framework:</p><a href="https://expressjs.com">Express JS</a>
-<p>Web Framework:</p><a href="https://https://reactjs.org">React JS</a>
-<p>Server Environment:</p><a href="https://nodejs.org/en">Node JS</a>
+    <h4><strong> Naw app ready to use</strong></h4>
 
-<h3>User Story:</h3>
+    <h3>Usage:</h3>
 
-<a href='https://trello.com/b/qLZoHCDH/project-4'>Trello</a>
+    <p>- You have to register to apply for job</p>
+    <p>- You can click on the *Jobs* to go the jobs</p>
+    <p>- You can search for any job</p>
+    <p>
+      - If yor are a recruiter, you can add jobs, and check all applications on
+      your jobs
+    </p>
 
-<h3>Data Flow</h3>
- <img class="workFrame" src="./frontend/images/workFrame.png"/>
-<h3>Guided By:</h3>
-<p>This project is guided by ©️ <a href="https://www.meraki-academy.org">MERAKI Academy</a></p>
+    <h3>Built Using:</h3>
+    <p class="builtUsing">
+      Database: <a href="https://www.mongodb.com">MongoDB</a>
+    </p>
+    <p class="builtUsing">
+      Server Framework: <a href="https://expressjs.com">Express JS</a>
+    </p>
+    <p class="builtUsing">
+      Web Framework: <a href="https://https://reactjs.org">React JS</a>
+    </p>
+    <p class="builtUsing">
+      Server Environment: <a href="https://nodejs.org/en">Node JS</a>
+    </p>
 
+    <h3>User Story:</h3>
 
-</body>
+    <p><a href="https://trello.com/b/qLZoHCDH/project-4">Trello</a></p>
+    <h3>Data Flow:</h3>
+    <img class="workFrame" src="./frontend/images/workFrame.png" />
+    <h3>Guided By:</h3>
+    <p>
+      This project is guided by ©️
+      <a href="https://www.meraki-academy.org">MERAKI Academy</a>
+    </p>
+  </body>
 </html>
